JSON Rework
Reworked JSON handling...